--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,12 +20,11 @@ main {
 }
 
 .container {
-
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: url('/bg.jpg');
+  background: url('/bgnew.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
