--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
-    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Roboto', sans-serif;
+  background-color: #f7f7f7;
+  color: #333333;
 }
 
 * {
@@ -24,22 +25,116 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.introSectionHome {
   background: url('/bgnew.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-}
-
-body {
-  background-color: #734b2e;
-  color: #f7f7f7;
+  height: 95vh;
+  align-items: center;
 }
 
 a {
-  color: #fbbc04;
+  color: #734b2e;
+  text-decoration: none;
 }
 
 button {
-  background-color: #d7263d;
-  color: #f7f7f7;
+  background-color: #734b2e;
+  color: #ffffff;
+  border: none;
+  padding: 0.75rem 1.5rem;
+  border-radius: 0.25rem;
+  font-size: 1rem;
+  cursor: pointer;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Lobster', cursive;
+  font-weight: 700;
+  margin: 1rem 0;
+}
+
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.75rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
+h4 {
+  font-size: 1.25rem;
+}
+
+h5 {
+  font-size: 1rem;
+}
+
+h6 {
+  font-size: 0.875rem;
+}
+
+p {
+  font-size: 1rem;
+  line-height: 1.5;
+  margin: 0.5rem 0;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+}
+
+.jumbotron {
+  bgcolor: #32323250;
+  color: #f7f7f7;
+  p: 5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  box-shadow: 2px 2px 4px #282828;
+  border-radius: 10px;
+}
+
+.app-bar {
+  background: linear-gradient(to right, #734b2e, #9b6e3d);
+  color: #f7f7f7;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  border-radius: 0 0 25px 25px;
+  border: 1px solid #9b6e3d;
+}
+
+.toolbar {
+  display: flex;
+  align-items: center;
+}
+
+  .link {
+    color: #f7f7f7;
+    text-decoration: none;
+    margin: 0 1rem;
+    font-family: 'Lobster', cursive;
+  }
+
+  .link:hover {
+    color: #ffffff;
+    font-weight: bolder;
+    transform: scale(1.2);
+  }
