--- a/styles/globals.css
+++ b/styles/globals.css
@@ -123,7 +123,8 @@ p {
 
 .toolbar {
   display: flex;
-  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
 
   .link {
@@ -137,4 +138,8 @@ p {
     color: #ffffff;
     font-weight: bolder;
     transform: scale(1.2);
+  }
+
+  .language-buttons {
+    margin-left: auto;
   }
