--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Roboto', sans-serif;
-  background-color: #f7f7f7;
+  background-color: #ffffff;
   color: #333333;
 }
 
@@ -117,7 +117,7 @@ p {
   justify-content: space-between;
   padding: 0.5rem 1rem;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-  border-radius: 0 0 25px 25px;
+  /* border-radius: 0 0 25px 25px; */
   border: 1px solid #9b6e3d;
 }
 
