--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,7 +32,7 @@ main {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 95vh;
+  height: 97vh;
   align-items: center;
 }
 
@@ -87,16 +87,39 @@ p {
   top: 0;
 }
 
+.stickyFooter {
+  position: static;
+  bottom: 0;
+  box-shadow: 2px 2px 4px #282828;
+  margin: 0;
+}
+
+.stickyFooter a {
+  color: #eeeeee95;
+}
+
 .jumbotron {
-  bgcolor: #32323250;
-  color: #f7f7f7;
-  p: 5;
+  background-color: #eee;
+  color: #323232;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   box-shadow: 2px 2px 4px #282828;
   border-radius: 10px;
+}
+
+.introSplash {
+  color: #ffffff;
+  box-shadow: 2px 2px 4px #282828;
+  border-radius: 10px;
+}
+
+.boxedContent {
+  box-shadow: 2px 2px 4px #282828;
+  border-radius: 10px;
+  margin: 2rem 0;
+  background-color: #eee;
 }
 
 .app-bar {
@@ -106,9 +129,10 @@ p {
   align-items: center;
   justify-content: space-between;
   padding: 0.5rem 1rem;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.343);
   /* border-radius: 0 0 25px 25px; */
   border: 1px solid #9b6e3d;
+  z-index: 1000;
 }
 
 .toolbar {
@@ -133,3 +157,33 @@ p {
   .language-buttons {
     margin-left: auto;
   }
+
+  .about {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+    padding: 2rem 1rem;
+    width: 100%;
+    background-color: #F7F7F7;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23734B2E' stroke-width='1.5'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%239B6E3D'%3E%3Ccircle cx='769' cy='229' r='7'/%3E%3Ccircle cx='539' cy='269' r='7'/%3E%3Ccircle cx='603' cy='493' r='7'/%3E%3Ccircle cx='731' cy='737' r='7'/%3E%3Ccircle cx='520' cy='660' r='7'/%3E%3Ccircle cx='309' cy='538' r='7'/%3E%3Ccircle cx='295' cy='764' r='7'/%3E%3Ccircle cx='40' cy='599' r='7'/%3E%3Ccircle cx='102' cy='382' r='7'/%3E%3Ccircle cx='127' cy='80' r='7'/%3E%3Ccircle cx='370' cy='105' r='7'/%3E%3Ccircle cx='578' cy='42' r='7'/%3E%3Ccircle cx='237' cy='261' r='7'/%3E%3Ccircle cx='390' cy='382' r='7'/%3E%3C/g%3E%3C/svg%3E");
+  }
+
+
+  .button-container {
+    display: flex;
+    justify-content: space-around;
+  }
+  
+  .button {
+    display: flex;
+    align-items: center;
+    margin: 10px;
+    padding: 10px 20px;
+  box-shadow: 2px 2px 4px #282828;
+  border-radius: 10px;
+  }
+  
